tests/baselines/reference/genericGetter3.errors.txt
genericGetter3.ts(11,5): error TS2322: Type 'A<number>' is not assignable to type 'string'.


==== genericGetter3.ts (1 errors) ====
    class A<T> { }
    
    class C<T> {
        data: A<T>;
        get x(): A<T> {
            return this.data;
        }
    }
    
    var c = new C<number>();
    var r: string = c.x;
        ~
!!! error TS2322: Type 'A<number>' is not assignable to type 'string'.